unpackaged/main/default/objects/Upgrade_Package_Mapping__c/Upgrade_Package_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Upgrade Package Mapping</label>
</CustomObject>