unpackaged/main/default/objects/Upgrade_Package_Mapping__c/fields/Origin_Prod_SKU__c.field-meta.xml
<CustomField>
    <fullName>Origin_Prod_SKU__c</fullName>
    <label>Origin Prod SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>