unpackaged/main/default/objects/Upgrade_Package_Mapping__c/fields/Origin_Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Rule_Code__c</fullName>
    <label>Origin Rule Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>