unpackaged/main/default/objects/Upgrade_Package_Mapping__c/fields/PC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PC_Quantity__c</fullName>
    <label>PC Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>