unpackaged/main/default/objects/Upgrade_Package_Mapping__c/fields/PC_SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>PC_SKU_Code__c</fullName>
    <label>PC SKU Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>