unpackaged/main/default/objects/Upgrade_Package_Mapping__c/fields/Rack_Price__c.field-meta.xml
<CustomField>
    <fullName>Rack_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Rack Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>