unpackaged/main/default/objects/Upgrade_Package_Mapping__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <label>AC SKU Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>